[package]
name = "lorawan"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "1.1.0"
defmt = { version = "0.3", optional = true }
aes = "0.8"
cmac = "0.7"

[target.'cfg(target_arch = "arm")'.dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
atsamd-hal = { version = "0.14", features = ["samd21g"] }

[target.'cfg(target_arch = "arm")'.dependencies.stm32f4xx-hal]
version = "0.15"
features = ["stm32f411"]
optional = true

[features]
default = []
std = []
defmt = ["dep:defmt"]
stm32f4 = ["stm32f4xx-hal"]
sx126x = []

[[example]]
name = "hello_world"
required-features = ["std"]

[[example]]
name = "otaa"
required-features = ["std"]

[[example]]
name = "downlink"
required-features = ["std"]

[[example]]
name = "repeater"
required-features = ["std"]
